--- a/_static/alabaster.css
+++ b/_static/alabaster.css
@@ -334,7 +334,7 @@ p.admonition-title:after {
 }
 
 pre, tt, code {
-    font-family: 'Consolas', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+    font-family: 'Fira Code', monospace;
     font-size: 0.9em;
 }
 
